prevent horizontal scrolling in android ics
the combined padding left and right and width 100% is causing horizontal
scrolling in android ics so removing width

--- a/assets/www/app.css
+++ b/assets/www/app.css
@@ -344,7 +344,6 @@ button#search
 	display: -webkit-box;
 	display: -moz-box;
 	display: box;
-	width: 100%;
 	background: -webkit-gradient(linear, left top, left bottom, from(#5F5F5F), to(#4F4F4F));
 	background: -moz-linear-gradient(#5F5F5F 0%, #4F4F4F 100%);
 	background: -ms-linear-gradient(#5F5F5F 0%, #4F4F4F 100%);
